perf: заменить ArrayList на LinkedList в классе InMemoryHistoryManager