@@ -1,23 +1,23 @@
 package managers;
 
 import tasks.Task;
-import java.util.ArrayList;
+import java.util.LinkedList;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private final ArrayList<Task> history = new ArrayList<>();
+    private final LinkedList<Task> history = new LinkedList<>();
 
     @Override
     public void add(Task task) {
         if (history.size() < 10) {
-            history.add(task);
+            history.addLast(task);
         } else {
-            history.remove(0);
-            history.add(task);
+            history.removeFirst();
+            history.addLast(task);
         }
     }
 
     @Override
-    public ArrayList<Task> getHistory(){
+    public LinkedList<Task> getHistory(){
         return history;
     }
 }
